<@marcos012, @vicfraga> Altera de ID para class

--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -209,11 +209,11 @@
                         <div class="field">
                             <div class="control label-acomp margin-invisible input-radio">
                                 <label>
-                                    <input id="generoA1" type="radio" value="F" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
+                                    <input class="generoA1" type="radio" value="F" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
                                     <span>Feminino</span>
                                 </label>
                                 <label>
-                                    <input id="generoA2" type="radio" value="M" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
+                                    <input class="generoA2" type="radio" value="M" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
                                     <span>Masculino</span>
                                 </label>
                             </div>
