--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -36,20 +36,22 @@
 
                             <tr th:each="solicitacao : ${solicitacoesHospital}">
                                 <td class="has-text-centered" th:text="${solicitacao.nome}"></td>
-                                <td class="has-text-centered">11-11-2018</td>
+                                <td class="has-text-centered" th:text="${solicitacao.formataData()}"></td>
                                 <td class="has-text-centered" th:text="${solicitacao.status}"></td>
                                 <td class="column has-text-centered">
                                     <a th:href="@{/solicitacao/{id}/editar(id=${solicitacao.id})}">
-                                        <button class="button" type="submit" th:if="${solicitacao.status}!='aceito'">
+                                        <button class="button" type="submit" th:if="${solicitacao.status}!='Aceito'">
                                             <i class="fas fa-edit"></i>
                                         </button>
                                     </a>
                                 </td>
                                 <td>
                                     <a th:href="@{/solicitacao/{id}/excluir(id=${solicitacao.id})}">
-                                        <button class="button is-danger" type="submit">Excluir</button>
+                                        <button class="button is-danger" type="submit" onclick="return confirm('Tem certeza que deseja excluir esse usuario?')">Excluir</button>
                                     </a>
+                                    <button class="button is-danger modal-button" id="btn" data-target="#confirm" type="submit" th:if="${solicitacao.status}!='Aceito'">Excluir  </button>
                                 </td>
+                                
                             </tr>
                         </table>
                     </div>
