<@eduarda96, @diovanemendes> Cria lista simples de quartos

--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -28,7 +28,7 @@
                             Ver informações
                         </button>
                     </a>
-                    <a th:href="@{/{id}/quartos/listaQuartos(id=${solicitacao.id})}">
+                    <a th:href="@{/quarto/{id}/listaQuartos(id=${solicitacao.id})}">
                         <button type="submit" class="button verde-viavida borda-arredondada">
                             Selecionar quarto
                         </button>
