--- a/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <main>
+    <div th:include="@{./partes/cabecalhoDadosSolicitante}"/>
     <div class="column has-text-centered">
         <a class="button verde-viavida" th:href="@{/solicitacao/casa/lista}">Voltar</a>
     </div>
@@ -15,7 +16,7 @@
         <div class="column has-text-centered">
             <ul th:each="quarto : ${listaQuartos}">
                 <div class="column">
-                    <a th:href="@{/quartos/{idSolicitacao}/quarto/{idQuarto}(idSolicitacao=${solicitacao.id}, idQuarto=${quarto.id})}">
+                    <a th:href="@{/quarto/{idSolicitacao}/quarto/{idQuarto}(idSolicitacao=${solicitacao.id}, idQuarto=${quarto.id})}">
                         <button type="reset" class="button is-success red"  th:if="${quarto.leitosDisponiveis <= 0 || numeroHospedes > quarto.leitosDisponiveis}" th:text="${quarto.nomeQuarto}"></button>
                         <button type="submit" class="button is-success "  th:if="${quarto.leitosDisponiveis > 0 && numeroHospedes <= quarto.leitosDisponiveis}" th:text="${quarto.nomeQuarto}"></button>
                     </a>
