<@eduarda96, @diovanemendes> Cria controllers para aceitar/negar e muda status no banco

--- a/app/src/main/resources/templates/partes/cabecalhoDadosSolicitante.html
+++ b/app/src/main/resources/templates/partes/cabecalhoDadosSolicitante.html
@@ -1,9 +1,18 @@
 <div class="column centralizar" xmlns:th="http://www.thymeleaf.org">
     <div>
-        <label>Nome:</label>
-        <label th:text="${solicitacao.nome}"></label>
+        <p class="centralizar">
+            <b>Informações Paciente</b>
+        </p>
         <p>
-            <label>Número de acompanhantes:</label>
+            <label>
+                <b>Nome:</b>
+            </label>
+            <label th:text="${solicitacao.nome}"></label>
+        </p>
+        <p>
+            <label>
+                <b>Número de acompanhantes:</b>
+            </label>
             <label th:text="${numeroHospedes - 1}"></label>
         </p>
     </div>
